--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <p>Desevolvedor Web</p>
 
                 <div class="buttons pt-3">
-                    <a class="btn btn-primary rounded" href="https://wa.me/5583981484191?text=Ent%C3%A3o+vc+%C3%A9+gostoso+da+computaria+" target="_blank">Me Contrate!</a>
+                    <a class="btn btn-primary rounded" href="https://wa.me/5583981484191?text=Ol%C3%A1%2C+vi+seu+perfil+no+GitHub+e+achei+seu+perfil+interessante+para+minha+empresa%2C+posso+saber+mais+sobre+vc%3F" target="_blank">Me Contrate!</a>
                     <a class="btn btn-dark rounded" href="assets/cv/cv.pdf" target="_blank">DOWNLOAD CV</a>
                 </div>      
 
@@ -301,7 +301,7 @@
                             <p class="mb-3">No desenvolvimento de projetos, sou conhecido por minha habilidade em traduzir requisitos em soluções funcionais e elegantes. </p>
                         </div>
                         <div class="col-sm-3 text-center text-sm-right">
-                            <a class="btn btn-light rounded" href="https://wa.me/5583981484191?text=Ent%C3%A3o+vc+%C3%A9+gostoso+da+computaria+" target="_blank">Fale Comigo!</a>
+                            <a class="btn btn-light rounded" href="https://wa.me/5583981484191?text=Ol%C3%A1%2C+vi+seu+perfil+no+GitHub+e+achei+seu+perfil+interessante+para+minha+empresa%2C+posso+saber+mais+sobre+vc%3F" target="_blank">Fale Comigo!</a>
                         </div>
                     </div>
                 </div> 
