--- a/index.html
+++ b/index.html
@@ -238,14 +238,12 @@
     </section>
     <!-- End of portfolio section -->
 
-    <!-- Testmonial Section -->
+   <!-- Testmonial Section -->
     <section id="testmonial" class="section">
         <div class="container text-center">
             <h6 class="subtitle">Comentarios </h6>
             <h6 class="section-title mb-4">O que as pessoas dizem sobre mim</h6>
             <p class="mb-5 pb-4">Comentario de alguns clientes e ex alunos .</p>
-
-
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -256,19 +254,19 @@
                     <div class="carousel-item active">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/Avatar1.png" alt="">
-                                <p>Www eu te amo muito, mesmo você sendo desempregado, olha esse concurso aqui ,por que vc não faz ?</p>
-                                <h1 class="title">Namorada</h1>
-                                <h1 class="subtitle">Engenharia ambiental</h1>
+                                <img src="" alt="">
+                                <p></p>
+                                <h1 class="title"></h1>
+                                <h1 class="subtitle"></h1>
                             </div>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-2.jpg" alt="">
-                                <p>Mano tu é muito bom, por que  não estuda pra concurso ? </p>
-                                <h1 class="title">Pedro</h1>
+                                <img src="" alt="">
+                                <p>Gostei muito das aulas, aprendi bastante sobre desenvolvimento, um dos melhores professorque eu já tive </p>
+                                <h1 class="title"></h1>
                                 <h1 class="subtitle">Ex aluno</h1>
                             </div>
                         </div>
@@ -276,11 +274,10 @@
                     <div class="carousel-item">
                         <div class="card testmonial-card border">
                             <div class="card-body">
-                                <img src="assets/imgs/avatar-3.jpg" alt="">
-                                <p>Essa tua area ai da dinheiro ne ? um caba ali já comprou uma apartamnto  comigo ele trablha nisso ai, e teu primo que esta ganhando 25 mil concursado la em sp, voce deveria fazer concurso por que não faz ?</p>
-                                <h1 class="title">Pai</h1>
-                                <h1 class="subtitle">Business man
-                                </h1>
+                                <img src="" alt="">
+                                <p>Parabéns pelo seu trabalho, voce é excelente em tudo que faz !</p>
+                                <h1 class="title"></h1>
+                                <h1 class="subtitle">Supervisor</h1>
                             </div>
                         </div>
                     </div>
