--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a target="_blank" href="https://github.com/joaquim-jf"><i class="ti-link"></i></a>
+                                <a target="_blank" href="https://clima-neon-two.vercel.app/"><i class="ti-link"></i></a>
                             </div>  
                         </div>
                     </div>                     
